- Introduced a factory.
- Bugfix: The comments may break out of the getter analysis json.
- Bugfix: Removed a warning in case kreXX was called fromn eval'd
  code.
- Bugfix: Dumping of inherited private properties works now.
- Bugfix: Inherited properties and methods are now regarded by the
  scope analysis.
- Bugfix: Blacklisted all reflection classes for configured debug
  methods.
- Change: Reworked some of the configurations (disable, maxRuntime,
  memoryLeft, iprange)
- Change: Refactored what did not make it into v2.0.0 due to time
  constraints and introduced a factory.
- Change: Removed the type-spam in the additional data.

2.1.0
- Added getter method analysis for models.
- Added search options to both skins.
- Bugfix: Added LazyLoadingProxy->__toString() to the debug
  blacklist to prevent a fatal.
- Bugfix: Fixed the (XX) logo interference with the search box
  in the Hans skin.
- Bugfix: The search count is not zero-based anymore.
- Bugfix: Recursion resolving works now for closures.
- Change: Moved the configuration file to it's own folder.
- Change: Made the callback display in both skins a little less
  obtrusive
- Change: Added the '=' the the Hans Skin for better readability.
- Change: [runtime]level is now '10' in the factory settings.
- Change: [runtime]maxCall is now '15' in the factory settings.
- Refactored code comment analysis.

2.0.1
- Refactored the configuration and introduced models there.
- Removed the \Krexx::enable() call.
- Removed configurations, that nobody was editing anyway.
- Added a ip mask to whitelist ip's that can trigger kreXX.
- Bugfix: Rendering of the 'extra' part for long string works
  now correctly.
- Bugfix: Sourcecode generation for Traversable classes should
  work now for none ArrayAccess classes.
- Bugfix: A string with the value of '0' will get displayed again.
- Bugfix: Fixed a notice in the \Krexx::backtrace();
- Change: Added the method arguments to the method analysis in the
  smokygrey skin.

2.0.0